[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["John Shiver <john@johnshiver.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "*"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
thiserror = "1.0"
